make h2 stop screaming
too large!

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,8 @@ h2 {
 position: relative;
 text-transform: uppercase;
 color: #444444;
-font-size: 16pt;
+font-size: 14pt;
+font-stretch: expanded;
 font-weight: 500;
 }
 
